--- a/src/TagExpression.module.css
+++ b/src/TagExpression.module.css
@@ -3,7 +3,6 @@
     justify-content: flex-start;
     flex-wrap: wrap;
     width: 100%;
-    height: 24px;
     padding: 8px;
     border: 1px solid #000;
 }
